--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="wrapper">
             <div class="parallax filter-gradient white" data-color="white">
                 <div class="parallax-background">
-                    <img class="parallax-background-image" src="assets/img/image-0.jpg">
+                    <img class="parallax-background-image" src="assets/img/Image-0.jpg">
                 </div>
                 <div class= "container">
                     <div class="row">
@@ -85,7 +85,7 @@
             <div class="section section-no-padding">
                 <div class="parallax filter-gradient white" data-color="white">
                     <div class="parallax-background">
-                        <img class ="parallax-background-image" src="assets/img/image-0_square.jpg"/>
+                        <img class ="parallax-background-image" src="assets/img/Image-0_square.jpg"/>
                     </div>
                 </div>
             </div>
