--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </nav>
         
                     <div class="copyright">
-                        &copy; 2015 <a href="http://www.arcydouglass.com">Arcy Douglass</a>
+                        &copy; 2015 <a href="http://arcydouglass.github.io/website/">Arcy Douglass</a>
                     </div>
                 </div>
             </footer>
