--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                             </div>
                         </div>
                         <div class="col-md-5 col-md-offset-1 hidden-xs">
-                            <img src="assets/img/dn.jpg" style="margin-bottom: 20px;"/>
+                            <img src="assets/img/dn.jpg"/>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="section section-no-padding">
+            <div class="section section-no-padding" style="margin-top: 20px;">
                 <div class="parallax filter-gradient white" data-color="white">
                     <div class="parallax-background">
                         <img class ="parallax-background-image" src="assets/img/Image-0_square.jpg"/>
