--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                                 <p>It is called The Sublime is Then ... And Now. It is about coming to terms with the way most Land Art projects exist in time and the continuing search for the sublime in contemporary art. </p>
                                 <p>Here is the 
-                                    <a href=" http://aridjournal.com/">link.</a>
+                                    <a href=" http://aridjournal.com/the-sublime-is-then-and-now-arcy-douglass/">link.</a>
                                 </p>
                             </div>
                         </div>
