--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <link rel="icon" type="image/png" href="assets/img/favicon.png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>Arcy Douglass Test</title>
+        <title>Arcy Douglass</title>
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
         <meta name="viewport" content="width=device-width" />
 
@@ -42,7 +42,7 @@
                         </div>
                         <div class="col-md-6 col-md-offset-1">
                             <div class="description" style="background: gray; padding: 20px; opacity: .9;">
-                                <h2 class="font-weight: 500;">Arcy Douglass</h>
+                                <h2 class="font-weight: 500;">Arcy Douglass Test</h>
                                 <br>
                                 <h5>Contact:</h5>
                                 <h5><a href="mailto:arcydouglass@gmail.com" style="color: white;">arcydouglass@gmail.com</a></h5>
