Updates index page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </div>
                         <div class="col-md-6 col-md-offset-1">
                             <div class="description" style="background: gray; padding: 20px; opacity: .9;">
-                                <h2 class="font-weight: 500;">Arcy Douglass Test</h>
+                                <h2 class="font-weight: 500;">Arcy Douglass</h>
                                 <br>
                                 <h5>Contact:</h5>
                                 <h5><a href="mailto:arcydouglass@gmail.com" style="color: white;">arcydouglass@gmail.com</a></h5>
