--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Website
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Wind Surfing Weather Web App
                                 </div>
                             </div>
                         </div>
@@ -161,10 +161,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Processing
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Dynamic Link Diagram
                                 </div>
                             </div>
                         </div>
@@ -176,10 +176,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    D3
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Keyword Diagram
                                 </div>
                             </div>
                         </div>
@@ -191,10 +191,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    D3
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Word Count
                                 </div>
                             </div>
                         </div>
@@ -206,10 +206,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Website
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Wind Surfing Weather Web App
                                 </div>
                             </div>
                         </div>
@@ -221,10 +221,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Processing
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Dynamic Field
                                 </div>
                             </div>
                         </div>
@@ -237,10 +237,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Website
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Health and Wellness Website
                                 </div>
                             </div>
                         </div>
@@ -253,10 +253,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    D3
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Force Bubble Diagram
                                 </div>
                             </div>
                         </div>
@@ -268,10 +268,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Processing
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Cloud
                                 </div>
                             </div>
                         </div>
@@ -283,10 +283,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Processing
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Rotating Color Fields
                                 </div>
                             </div>
                         </div>
@@ -298,10 +298,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Processing
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Autonomous Artworks
                                 </div>
                             </div>
                         </div>
@@ -313,10 +313,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Processing
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Infinite Dynamic Circles
                                 </div>
                             </div>
                         </div>
