--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Arcy Douglass - UX Designer</h1>
+                <h1 id="homeHeading">Arcy Douglass - Developer</h1>
                 <hr>
-                <p>I have two passions in life: great design and great code.  I love it when I discover a solution in code that is even better than what I thought was possible</p>
+                <p>I have two passions in life: learning new software tools and writing great code.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">About Me</a>
             </div>
         </div>
@@ -86,7 +86,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">My background in design makes me a better coder!</h2>
                     <hr class="light">
-                    <p class="text-faded"> My experience spans the worlds of design, project management and software development. I am currently working as a designer and coder at a company producing decision-support software for military and other analysts. I am part of a small team working on very complex Angular 1.5 projects. As part of my role on the team, I am exposed to a wide variety of technologies, including frontend testing in Selenium, with design patterns in  Angular, structuring data in JSON, and even a little bit of Scala. For UX, I regularly leverage libraries such as Material Design and Bootstrap 3.0, as well as custom CSS, to create visual solutions for a web app.
+                    <p class="text-faded"> My experience spans the worlds of design, project management and software development. I am currently working as a designer and coder at a company producing decision-support software for military and other analysts. I am part of a small team working on very complex Angular and React projects. As part of my role on the team, I am exposed to a wide variety of technologies, including frontend testing in Selenium, with design patterns in  Angular, structuring data in JSON, and even a little bit of Scala. For UX, I regularly leverage libraries such as Material Design and Bootstrap, as well as custom CSS, to create visual solutions for a web app.
 </p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Making Connections</a>
                 </div>
