--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:arcydouglass@gmail.com">arcydouglass@gmail.com</a></p>
+                    <p><a href="mailto:arcydouglass@gmail.com">arcydca@gmail.com</a></p>
                 </div>
             </div>
         </div>
